--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ zalgo-text
 geopy
 nltk
 psutil
+gitpython
 aiohttp
 Pillow
 CurrencyConverter
@@ -55,7 +56,7 @@ asyncio
 cloudscraper
 dateparser
 pymongo
-dnspython
+dnspython==2.3.0
 secureme
 apscheduler
 emoji-country-flag
